# Drone-Pi

CAO/: Batterie.SLDPRT  BrasSupport.SLDPRT  Carte PCB.SLDPRT  Couvercle.SLDPRT  Drone.SLDASM  DronePrint.SLDASM  ESC.SLDPRT  Frame.SLDASM  Frame.SLDPRT  FrameBase.SLDPRT  FrameBras.SLDPRT  Hélice.SLDPRT  ICM.SLDPRT  LM.SLDPRT  MPU.SLDPRT  Moteur.SLDASM  Moteur.SLDPRT  PI.SLDPRT  Pied.SLDPRT  Pièce1.SLDPRT  PlaqueSupportPi.SLDPRT  Support Vis.SLDPRT  Vis.SLDPRT
CAO/New Frame/: Drone.SLDASM  ESC.SLDPRT  ESP32.SLDPRT  Frame-SimulationXpress Study.EFF  Frame-SimulationXpress Study.LDS  Frame-SimulationXpress Study.OUT  Frame-SimulationXpress Study.opm  Frame.SLDPRT  ICM.SLDPRT  Plaque.SLDPRT
CAO/STL/: Drone - BrasSupport-3.STL  Drone - Pièce1-1.STL  DronePrint - BrasSupport-3-1.STL  DronePrint - BrasSupport-3.STL  DronePrint - BrasSupport-5.STL  DronePrint - BrasSupport-7.STL  DronePrint - BrasSupport-9.STL  DronePrint - Frame-1 FrameBras-2.STL  DronePrint - Pièce1-1.STL
CAO/STL2/: Drone - Frame-1 FrameBase-1.STL  Drone - Frame-1 FrameBras-1.STL  Drone - Frame-1 FrameBras-3.STL
CAO/STL3/: Drone - Frame-1 FrameBras-2.STL  Drone - ICM-1.STL  Drone - LM-1.STL  Drone - Pièce1-1.3mf  Drone - RaspberryPi5.step-1 CAM-DISP for REF.step-1.STL  Drone - RaspberryPi5.step-1 FAN Header for REF.step-1.STL  Drone - RaspberryPi5.step-1 LED for REF.step-1.STL  Drone - RaspberryPi5.step-1 PCB_for REF 060923.step-1.STL  Drone - RaspberryPi5.step-1 PCIe for REF.step-1.STL  Drone - RaspberryPi5.step-1 PoE Header for REF.step-1.STL  Drone - RaspberryPi5.step-1 RJ45 for REF.step-1.STL  Drone - RaspberryPi5.step-1 SD CARD for REF.step-1.STL  Drone - Support Vis-4.STL  Drone - Vis-6.STL  (+4 more)
Code/: CMakeLists.txt
Code/include/libmotor/: Motor.hpp
Code/include/libpid/: PID.hpp
Code/matwac/Batt/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  my_exe
Code/matwac/Batt/src/: .main.cpp.swp  main.cpp
Code/matwac/Drone/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
Code/matwac/Drone/include/libmotor/: Motor.hpp
Code/matwac/Drone/src/: .Moto.cpp.swp  Motor.cpp  main.cpp
Code/matwac/MPU/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Code/matwac/MPU/src/: main.cpp
Code/matwac/Motors/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Code/matwac/Motors/include/libmotor/: Motor.hpp
Code/matwac/Motors/src/: Motor.cpp  Motor.cpp.save  main.cpp
Code/src/: Motor.cpp  PID.cpp  main.cpp
(+135 files in other folders)
